starting the formatting process

--- a/jupyter/02_Process.ipynb
+++ b/jupyter/02_Process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "02ac8a21-c729-4de9-b834-5d3bb8b0a756",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,7 @@
     "## READ DATA\n",
     "## FORMATTING\n",
     "- Points/conclusion from EDA jupyternotebook\n",
+    "- Functions used\n",
     "\n",
     "## PREDICTION ANALYSIS\n",
     "- PYCARET\n",
@@ -50,12 +51,12 @@
    "id": "abd5028c-a085-4c9b-a604-46f4b4b463b4",
    "metadata": {},
    "source": [
-    "# Read data"
+    "# Reading data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "id": "d43db69a-accd-482d-ade1-f00b3f5d93b7",
    "metadata": {},
    "outputs": [],
@@ -66,14 +67,147 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4f5314d",
+   "metadata": {},
+   "source": [
+    "# Formatting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c9e1893",
+   "metadata": {},
+   "source": [
+    "### Functions used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "31d91c34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_data_type(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Properly data type converting\n",
+    "    \"\"\"\n",
+    "    converted_data = df.astype({'Name': 'string',\n",
+    "                                'Sex': 'category',\n",
+    "                                'Ticket': 'category',\n",
+    "                                'Cabin': 'category',\n",
+    "                                'Embarked': 'category'})\n",
+    "    return converted_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "04f9454f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_features(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Properly data formatting\n",
+    "        -> Drop columns (for while)\n",
+    "        -> missing null values\n",
+    "            -> mean\n",
+    "            -> klustering\n",
+    "        -> hot encoding\n",
+    "    \"\"\"\n",
+    "    print('ok')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "df73c49a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          714 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        204 non-null    object \n",
+      " 11  Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "af7e1b81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype   \n",
+      "---  ------       --------------  -----   \n",
+      " 0   PassengerId  891 non-null    int64   \n",
+      " 1   Survived     891 non-null    int64   \n",
+      " 2   Pclass       891 non-null    int64   \n",
+      " 3   Name         891 non-null    string  \n",
+      " 4   Sex          891 non-null    category\n",
+      " 5   Age          714 non-null    float64 \n",
+      " 6   SibSp        891 non-null    int64   \n",
+      " 7   Parch        891 non-null    int64   \n",
+      " 8   Ticket       891 non-null    category\n",
+      " 9   Fare         891 non-null    float64 \n",
+      " 10  Cabin        204 non-null    category\n",
+      " 11  Embarked     889 non-null    category\n",
+      "dtypes: category(4), float64(2), int64(5), string(1)\n",
+      "memory usage: 88.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = convert_data_type(train_data)\n",
+    "x.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0e2d7c67-a67c-4df5-a237-d719dd2cca95",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### train "
+    "### Train "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77f6e8b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -85,6 +219,14 @@
    "source": [
     "### Test"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dc7987c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
