finished formatting v2 (details on EDA jupyter)

--- a/jupyter/02_Process.ipynb
+++ b/jupyter/02_Process.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "02ac8a21-c729-4de9-b834-5d3bb8b0a756",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "# from dataprep.eda import create_report\n",
+    "\n",
+    "#formatting\n",
+    "from sklearn.preprocessing import OrdinalEncoder #1st attempt to improve results\n",
     "\n",
     "#models\n",
     "#1.st attempt\n",
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 92,
    "id": "d43db69a-accd-482d-ade1-f00b3f5d93b7",
    "metadata": {},
    "outputs": [],
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "31d91c34",
    "metadata": {},
    "outputs": [],
@@ -101,93 +104,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 83,
    "id": "04f9454f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "ordinal_encoder = OrdinalEncoder()\n",
+    "\n",
     "def format_features(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Properly data formatting\n",
-    "        -> Drop columns (for while)\n",
+    "        \n",
     "        -> missing null values\n",
     "            -> mean\n",
     "            -> klustering\n",
     "        -> hot encoding\n",
+    "        -> Drop columns:\n",
+    "            - ['Name'] -> current not being considered\n",
+    "            - ['Sex'] -> OrdinalEncoder applied and replace by _sex_encoded\n",
+    "            - ['Ticket'] -> OrdinalEncoder applied and replace by _ticket_encoded\n",
     "    \"\"\"\n",
-    "    print('ok')"
+    "    \n",
+    "    #hanlding missing values\n",
+    "    df['Age'] = df['Age'].fillna(df['Age'].mean())\n",
+    "    df['Fare'] = df['Fare'].fillna(df['Age'].mean())\n",
+    "\n",
+    "    #handling missing values (with mode) -> temporary approach (easiest and faster)\n",
+    "    #-- Cabin\n",
+    "    cabin_mode = df['Cabin'].value_counts().index[0]\n",
+    "    df['Cabin'].fillna(cabin_mode, inplace=True)\n",
+    "    #-- Embarked\n",
+    "    embarked_mode = df['Embarked'].value_counts().index[0]\n",
+    "    df['Embarked'].fillna(embarked_mode, inplace=True)\n",
+    "\n",
+    "    #encoder\n",
+    "    df['_sex_encoded'] = ordinal_encoder.fit_transform(df[['Sex']])\n",
+    "    df['_ticket_encoded'] = ordinal_encoder.fit_transform(df[['Ticket']])\n",
+    "    df['_cabin_encoded'] = ordinal_encoder.fit_transform(df[['Cabin']])\n",
+    "    df['_embarked_encoded'] = ordinal_encoder.fit_transform(df[['Cabin']])\n",
+    "\n",
+    "    #dropping columns\n",
+    "    df = df.drop(columns={'Name', 'Sex', 'Ticket', 'Cabin', 'Embarked'})\n",
+    "\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "df73c49a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   PassengerId  891 non-null    int64  \n",
-      " 1   Survived     891 non-null    int64  \n",
-      " 2   Pclass       891 non-null    int64  \n",
-      " 3   Name         891 non-null    object \n",
-      " 4   Sex          891 non-null    object \n",
-      " 5   Age          714 non-null    float64\n",
-      " 6   SibSp        891 non-null    int64  \n",
-      " 7   Parch        891 non-null    int64  \n",
-      " 8   Ticket       891 non-null    object \n",
-      " 9   Fare         891 non-null    float64\n",
-      " 10  Cabin        204 non-null    object \n",
-      " 11  Embarked     889 non-null    object \n",
-      "dtypes: float64(2), int64(5), object(5)\n",
-      "memory usage: 83.7+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "train_data.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 96,
    "id": "af7e1b81",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column       Non-Null Count  Dtype   \n",
-      "---  ------       --------------  -----   \n",
-      " 0   PassengerId  891 non-null    int64   \n",
-      " 1   Survived     891 non-null    int64   \n",
-      " 2   Pclass       891 non-null    int64   \n",
-      " 3   Name         891 non-null    string  \n",
-      " 4   Sex          891 non-null    category\n",
-      " 5   Age          714 non-null    float64 \n",
-      " 6   SibSp        891 non-null    int64   \n",
-      " 7   Parch        891 non-null    int64   \n",
-      " 8   Ticket       891 non-null    category\n",
-      " 9   Fare         891 non-null    float64 \n",
-      " 10  Cabin        204 non-null    category\n",
-      " 11  Embarked     889 non-null    category\n",
-      "dtypes: category(4), float64(2), int64(5), string(1)\n",
-      "memory usage: 88.0 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = convert_data_type(train_data)\n",
-    "x.info()"
+    "def format_test_data(df_test: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Specific fuction to handle with test dataset\n",
+    "\n",
+    "    Args:\n",
+    "        df (pd.DataFrame): test dataset\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: formatead test dataset\n",
+    "    \"\"\"\n",
+    "\n",
+    "    converted_test_data = convert_data_type(df_test)\n",
+    "    formated_test_data =  format_features(converted_test_data)\n",
+    "\n",
+    "    return formated_test_data\n"
    ]
   },
   {
@@ -203,11 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "77f6e8b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "converted_train_data = convert_data_type(train_data)\n",
+    "formated_train_data = format_features(converted_train_data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,8 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "id": "5dc7987c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "formated_test_data = format_test_data(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0fbe5ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -234,220 +228,33 @@
    "metadata": {},
    "source": [
     "### Creating model\n",
-    "Simple model filling empty cases"
+    "Simple model after some cleaning based on EDA analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 104,
    "id": "00a739c8-34c6-4261-920f-71d5c01d36fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1         0       3   \n",
-       "1            2         1       1   \n",
-       "2            3         1       3   \n",
-       "3            4         1       1   \n",
-       "4            5         0       3   \n",
-       "\n",
-       "                                                Name     Sex   Age  SibSp  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-       "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  "
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "49a1693b-e87f-4f5d-99a8-6cfe1a25903a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PassengerId      0\n",
-       "Survived         0\n",
-       "Pclass           0\n",
-       "Name             0\n",
-       "Sex              0\n",
-       "Age            177\n",
-       "SibSp            0\n",
-       "Parch            0\n",
-       "Ticket           0\n",
-       "Fare             0\n",
-       "Cabin          687\n",
-       "Embarked         2\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_data.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "a9b52985-506c-49cb-8605-a3d13117ab1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data['Age'] = train_data['Age'].fillna(train_data['Age'].mean())\n",
-    "train_data['Fare'] = train_data['Fare'].fillna(train_data['Fare'].mean())"
+    "# train_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 107,
    "id": "5c78ec08-fc18-4899-b555-e03c22dcfd4b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = train_data.drop({'Survived', 'PassengerId', 'Name', 'Sex', 'Ticket', 'Cabin', 'Embarked'}, axis=1)\n",
-    "y_train = train_data[['Survived']]"
+    "x_train = formated_train_data.drop({'Survived'}, axis=1)\n",
+    "y_train = formated_train_data[['Survived']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 108,
    "id": "a9d4fc4a-09dc-43cc-bee3-4428b5743b9f",
    "metadata": {},
    "outputs": [],
@@ -474,38 +281,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "bfa89f65-db93-46db-8f29-c02552616cc2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_data['Age'] = test_data['Age'].fillna(test_data['Age'].mean())\n",
-    "test_data['Fare'] = test_data['Fare'].fillna(test_data['Fare'].mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "c329930c-185f-4c31-b6c0-572eb2025c7b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_test = test_data.drop({'PassengerId', 'Name', 'Sex', 'Ticket', 'Cabin', 'Embarked'}, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 110,
    "id": "285b9853-4e86-4f5c-be43-81a1ea80ff16",
    "metadata": {},
    "outputs": [],
    "source": [
+    "x_test = formated_test_data.copy()\n",
     "y_pred = decision_tree.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 111,
    "id": "de81f844-6760-49b2-ab35-a78d6c2f4442",
    "metadata": {},
    "outputs": [],
@@ -516,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 112,
    "id": "28d388ce-00ad-4559-b1dc-708691a492dc",
    "metadata": {},
    "outputs": [
@@ -584,7 +371,7 @@
        "4          896         0"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,18 +382,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 113,
    "id": "c5deb84a-3120-4c12-aa82-767242aa858e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission_file.to_csv('../data/submission/submission.csv', index=False)"
+    "submission_file.to_csv('../data/submission/submission-12-12-2022.csv', index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('env': venv)",
+   "display_name": "Python 3.8.7 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -620,11 +407,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.7"
   },
   "vscode": {
    "interpreter": {
-    "hash": "d74d3a12d8f39749a1ac157c2b73aa3e02f4b602586df97fed941e3cdac00c6e"
+    "hash": "a465aa970e70d8f65da8361b98a6597f508536fa1af350b72956ef37bbe0b79e"
    }
   }
  },
